adding get one job functionality
