# shoveler/server/routes/jobs.server.routes.js
@@ -5,5 +5,8 @@ module.exports = function(app) {
   app.route('/api/jobs')
      .get(jobs.getJobs)
      .post(jobs.postJobs);
-     
+
+  app.route('/api/jobs/:jobId')
+     .get(jobs.getOneJob);
+
 };
